# Task2

./: .gitignore  _init_.py  pyproject.toml
example/: main.py  pyproject.toml
mygenerators/: generators.py  iterator.py
